--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.yuyakaido.android:square-image-view:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
 }
