--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'cn.jzvd:jiaozivideoplayer:6.2.9'
     implementation 'com.yuyakaido.android:square-image-view:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+
 }
